Try to fix align for mobile

--- a/style.css
+++ b/style.css
@@ -19,10 +19,10 @@
   }
 
   .dropdown .dropbtn {
-    padding: 16px 16px;
+    padding: 15px 16px;
   }
   .dropbtn-active {
-    padding: 16px 16px;
+    padding: 15px 16px;
   }
 }
 
